# Ancrypt

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  set_up.rs
src-tauri/src/commands/: commands.rs
src-tauri/src/vault/: encrypted_password.rs  master_password.rs  mod.rs  vault.rs
src/OpeningPage/: DeleteVault.tsx  Login.tsx  NewFile.tsx  OpenVault.tsx  Styles.css
src/Vault/: DeletePassword.tsx  Vault.css  Vault.tsx
